# tensorflow

./: .gitignore
tensorflow/contrib/android/cmake/: CMakeLists.txt  build.gradle
tensorflow/core/framework/: node_def_util.cc
tensorflow/core/util/: version_info.cc
tensorflow/examples/android/: build.gradle  build.gradle.bazel  build.gradle.cmake  download-models.gradle
tensorflow/examples/android/cmake/: README.md  build.gradle  settings.gradle
tensorflow/examples/android/cmake/Tensorflow-Android-Inference-debug/: build.gradle
tensorflow/examples/android/cmake/app/: CMakeLists.txt  build.gradle
tensorflow/examples/android/cmake/common/include/: common.h
tensorflow/examples/android/cmake/gradle/wrapper/: gradle-wrapper.properties
tensorflow/examples/android/common/lib/strings/: stringprintf.cc  stringprintf.h
tensorflow/examples/android/common/platform/: env_time.cc  env_time.h  logging.h  types.h
tensorflow/examples/android/common/platform/default/: logging.cc  logging.h
tensorflow/examples/android/jni/: CMakeLists.txt
tensorflow/examples/android/jni/object_tracking/: geom.h  image-inl.h  image.h  image_data.h  image_neon.cc  image_utils.h  integral_image.h  keypoint.h  keypoint_detector.cc  keypoint_detector.h  log_streaming.h  object_detector.h  object_model.h  object_tracker.cc  object_tracker.h  object_tracker_jni.cc  optical_flow.cc  optical_flow.h  time_log.cc  time_log.h  tracked_object.cc  tracked_object.h  utils.h
